--- a/public/index/css/nghiencuu.css
+++ b/public/index/css/nghiencuu.css
@@ -24,14 +24,16 @@ body {
 }
 
 .main h1 {
-    font-size: 24px;
+    font-size: 12px;
     font-weight: 400;
     text-align: center;
 }
 
 .main img {
+  /* height: auto;
+  max-width: 100%; */
   height: auto;
-  max-width: 100%;
+  width: 200px;
   vertical-align: middle;
 }
 
