--- a/public/index/css/styles.css
+++ b/public/index/css/styles.css
@@ -10002,11 +10002,11 @@ p {
   margin-bottom: 1rem;
 }
 .page-section h3.section-subheading {
-  font-size: 1rem;
-  font-weight: 400;
-  font-style: italic;
-  font-family: "Droid Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  margin-bottom: 4rem;
+  font-size: 13px;
+  font-weight: 300;
+  /* font-style: italic; */
+  font-family: Arial;
+  margin-bottom: 2rem;
 }
 
 @media (min-width: 768px) {
@@ -10151,7 +10151,7 @@ header.masthead .masthead-heading {
 
 @media (min-width: 1000px) {
   header.masthead {
-    padding-top: 3rem;
+    padding-top: 0rem;
     padding-bottom: 0;
   }
   header.masthead .masthead-subheading {
