--- a/public/index/css/tintuc.css
+++ b/public/index/css/tintuc.css
@@ -1,175 +1,149 @@
-/* section {
-    background: #F4F4F4;
-    padding: 50px 0;
-  }
-  .container {
-    max-width: 1044px;
-    margin: 0 auto;
-    padding: 0 20px;
-  } */
-  .carousel {
-    display: block;
-    text-align: left;
-    position: relative;
-    margin-bottom: 22px;
-  }
-  .carousel > input {
-    clip: rect(1px, 1px, 1px, 1px);
-    clip-path: inset(50%);
-    height: 1px;
-    width: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-  }
-  .carousel > input:nth-of-type(6):checked ~ .carousel__slides .carousel__slide:first-of-type {
-    margin-left: -500%;
-  }
-  .carousel > input:nth-of-type(5):checked ~ .carousel__slides .carousel__slide:first-of-type {
-    margin-left: -400%;
-  }
-  .carousel > input:nth-of-type(4):checked ~ .carousel__slides .carousel__slide:first-of-type {
-    margin-left: -300%;
-  }
-  .carousel > input:nth-of-type(3):checked ~ .carousel__slides .carousel__slide:first-of-type {
-    margin-left: -200%;
-  }
-  .carousel > input:nth-of-type(2):checked ~ .carousel__slides .carousel__slide:first-of-type {
-    margin-left: -100%;
-  }
-  .carousel > input:nth-of-type(1):checked ~ .carousel__slides .carousel__slide:first-of-type {
-    margin-left: 0%;
-  }
-  .carousel > input:nth-of-type(1):checked ~ .carousel__thumbnails li:nth-of-type(1) {
-    box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5);
-  }
-  .carousel > input:nth-of-type(2):checked ~ .carousel__thumbnails li:nth-of-type(2) {
-    box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5);
-  }
-  .carousel > input:nth-of-type(3):checked ~ .carousel__thumbnails li:nth-of-type(3) {
-    box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5);
-  }
-  .carousel > input:nth-of-type(4):checked ~ .carousel__thumbnails li:nth-of-type(4) {
-    box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5);
-  }
-  .carousel > input:nth-of-type(5):checked ~ .carousel__thumbnails li:nth-of-type(5) {
-    box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5);
-  }
-  .carousel > input:nth-of-type(6):checked ~ .carousel__thumbnails li:nth-of-type(6) {
-    box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5);
-  }
-  .carousel__slides {
-    position: relative;
-    z-index: 1;
-    padding: 0;
-    margin: 0;
-    overflow: hidden;
-    white-space: nowrap;
-    box-sizing: border-box;
-    display: flex;
-  }
-  .carousel__slide {
-    position: relative;
-    display: block;
-    flex: 1 0 100%;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    transition: all 300ms ease-out;
-    /* vertical-align: top; */
-    box-sizing: border-box;
-    white-space: normal;
-  }
-  .carousel__slide figure {
-    display: flex;
-    margin: 0;
-  }
-  .carousel__slide div {
-    position: relative;
-    width: 100%;
-  }
-  .carousel__slide div:before {
-    display: block;
-    content: "";
-    width: 100%;
-    padding-top: 66.6666666667%;
-  }
-  .carousel__slide div > img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-  }
-  .carousel__slide img {
-    display: block;
-    flex: 1 1 auto;
-    object-fit: cover;
-  }
-  .carousel__slide figcaption {
-    align-self: flex-end;
-    padding: 20px 20px 0 20px;
-    flex: 0 0 auto;
-    width: 25%;
-    min-width: 150px;
-  }
-  .carousel__slide .credit {
-    margin-top: 1rem;
-    color: rgba(0, 0, 0, 0.5);
-    display: block;
-  }
-  .carousel__slide.scrollable {
-    overflow-y: scroll;
-  }
-  .carousel__thumbnails {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    margin: 0 -10px;
-  }
-  .carousel__slides + .carousel__thumbnails {
-    margin-top: 20px;
-  }
-  .carousel__thumbnails li {
-    flex: 1 1 auto;
-    max-width: calc((100% / 6) - 20px);
-    margin: 0 10px;
-    transition: all 300ms ease-in-out;
-  }
-  .carousel__thumbnails label {
-    display: block;
-    position: relative;
-  }
-  .carousel__thumbnails label:before {
-    display: block;
-    content: "";
-    width: 100%;
-    padding-top: 100%;
-  }
-  .carousel__thumbnails label > img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-  }
-  .carousel__thumbnails label:hover, .carousel__thumbnails label:focus {
-    cursor: pointer;
-  }
-  .carousel__thumbnails label:hover img, .carousel__thumbnails label:focus img {
-    box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.25);
-    transition: all 300ms ease-in-out;
-  }
-  .carousel__thumbnails img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
+/* RESET */
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body {
+	background: #ebecf0;
+	font-family: "Open Sans", sans-serif;
+	min-height: 100vh;
+}
+
+body a {
+	text-decoration: none;
+	color: #172b4d;
+}
+
+body h1 {
+	font-family: "Song Myung", serif;
+}
+
+/* DEFAULT STYLE */
+.c {
+	font-size: 12px;
+	--card-img-height: 150px;
+}
+
+.c-container {
+	width: 100%;
+	height: auto;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	align-items: center;
+	transition: all 200ms ease-in-out;
+}
+
+.c {
+	align-self: flex-start;
+	position: relative;
+	width: 150px;
+	min-width: 200px;
+	margin: 0.25rem 0.25rem;
+	background: white;
+	transition: all 300ms ease-in-out;
+}
+
+.c .c-img {
+	visibility: hidden;
+	width: 100%;
+	height: var(--card-img-height);
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: cover;
+}
+
+.c .c-img-hovered {
+	--card-img-hovered-overlay: linear-gradient(to bottom, transparent, transparent);
+	transition: all 350ms ease-in-out;
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: cover;
+	width: 100%;
+	position: absolute;
+	height: var(--card-img-height);
+	top: 0;
+}
+
+.c .c-info {
+	position: relative;
+	padding: 0.75rem 1.25rem;
+	transition: all 200ms ease-in-out;
+}
+
+.c .c-info .c-about {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0.75rem 0;
+	transition: all 200ms ease-in-out;
+}
+
+.c .c-info .c-about .c-tag {
+	width: 60px;
+	max-width: 100px;
+	padding: 0.2rem 0.5rem;
+	font-size: 12px;
+	text-align: center;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	background: #505f79;
+	color: #fff;
+}
+
+.c .c-info .c-about .c-tag.tag-news {
+	background: #36b37e;
+}
+
+.c .c-info .c-about .c-tag.tag-events {
+	width: 71px;
+	background: #ff5630;
+}
+
+.c .c-info .c-title {
+	z-index: 10;
+	font-size: 13px;
+	transition: all 350ms ease-in-out;
+	overflow: hidden;
+   	text-overflow: ellipsis;
+   	display: -webkit-box;
+   	-webkit-line-clamp: 2; /* number of lines to show */
+   	-webkit-box-orient: vertical;
+}
+
+.c .c-info .c-creator {
+	padding-bottom: 0.75rem;
+	transition: all 250ms ease-in-out;
+}
+
+.c:hover {
+	cursor: pointer;
+	box-shadow: 0px 15px 35px rgba(227, 252, 239, 0.1), 0px 5px 15px rgba(0, 0, 0, 0.07);
+	transform: scale(1.025);
+}
+
+.c:hover .c-img-hovered {
+	--card-img-hovered-overlay: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.65));
+	height: 100%;
+}
+
+.c:hover .c-about,
+    .c:hover .c-creator {
+	opacity: 0;
+}
+
+.c:hover .c-info {
+	background-color: transparent;
+}
+
+.c:hover .c-title {
+	color: #ebecf0;
+	transform: translate(0, 40px);
+}
+
+.c .c-img,
+.c .c-img-hovered {
+	background-image: var(--card-img-hovered-overlay);
+}
