--- a/public/index/css/styles.css
+++ b/public/index/css/styles.css
@@ -383,7 +383,7 @@ h4, .h4 {
 }
 
 h5, .h5 {
-  font-size: 1.25rem;
+  font-size: 28px;
 }
 
 h6, .h6 {
@@ -4329,7 +4329,7 @@ input[type=button].btn-block {
   word-wrap: break-word;
   background-color: #fff;
   background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.125);
+  border: 0px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
 }
 .card > hr {
@@ -10079,17 +10079,17 @@ img::-moz-selection {
 }
 #mainNav .navbar-nav .nav-item .nav-link {
   font-family: Calibri!important;
-  font-size: 0.7rem;
-  color: rgb(255, 255, 255);
+  font-size: 12px;
+  color: #555;
   letter-spacing: 0.0025em;
 }
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
-  color: #ffffff;
+  color: #2276dd;
 }
 
 @media (min-width: 992px) {
   #mainNav {
-    padding-top: 0rem;
+    padding-top: 0;
     padding-bottom: 0rem;
     border: none;
     background-color: transparent;
