--- a/public/index/css/nav.css
+++ b/public/index/css/nav.css
@@ -4,11 +4,11 @@
     font-family: Arial; 
     padding:8px;
   }
-  .navbar-expand-lg {
+  .navbarsmall-expand-lg {
     flex-flow: row nowrap;
     justify-content: flex-start;
   }
-  .navbar-expand-lg .navbar-nav {
+  .navbarsmall-expand-lg .navbar-nav {
     flex-direction: row;
   }
   @media only screen and (max-width: 700px) {
@@ -18,7 +18,7 @@
         font-family: Arial; 
         padding:3px
       }
-    .navbar-expand-lg .navbar-nav {
+    .navbarsmall-expand-lg .navbar-nav {
     flex-direction: row;
   }
   }
@@ -29,7 +29,7 @@
         font-family: Arial; 
         padding:3px;
       }
-    .navbarsmall-expand-lg .navbar-nav {
+    .navbarsmallsmall-expand-lg .navbar-nav {
     flex-direction: row;
   }
   }
