--- a/public/index/css/tintuc.css
+++ b/public/index/css/tintuc.css
@@ -1,5 +1,5 @@
 /* RESET */
-* {
+/* * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
@@ -9,7 +9,7 @@ body {
 	background: #ebecf0;
 	font-family: "Open Sans", sans-serif;
 	min-height: 100vh;
-}
+} */
 
 body a {
 	text-decoration: none;
