--- a/public/trangphu/css/respon.css
+++ b/public/trangphu/css/respon.css
@@ -1,10 +1,10 @@
 /* REMOVE THIS, USE YOUR OWN  */
-html,body {
+/* html,body {
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, Sans-serif;
     background-color: #ffffff;
-  }
+  } */
   .dummy_page {
     height: 200px;
     width: 100%;
