--- a/public/trangphu/css/anh.css
+++ b/public/trangphu/css/anh.css
@@ -6,7 +6,22 @@ img.cangiua {
 .body{
     /* background-color: #f8f8f8; */
     background-image: url('/index/assets/img/1.jpg');
+    font-size: 13px;
+    text-align: justify;
 }
 .row{
     background-color: #fdfdfd;
+}
+.title{
+    font-size: 36px;
+    color: #aa8e2d;
+}
+.mucnho{
+    font-size: 25px;
+    color: #003366;
+}
+@media only screen and (max-width: 700px) {
+    .body{
+        font-size: 9px;
+    }
 }
